@@ -3,6 +3,8 @@ package com.example.igrsapp.exception;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+
+import java.util.Collections;
 import java.util.Map;
 
 @ControllerAdvice
@@ -10,22 +12,25 @@ public class ExceptionHandler {
 
     @org.springframework.web.bind.annotation.ExceptionHandler(IllegalArgumentException.class)
     public ResponseEntity<Map<String, String>> handleIllegalArgument(IllegalArgumentException ex) {
+        // return ResponseEntity
+        //         .status(HttpStatus.BAD_REQUEST)
+        //         .body(Map.of("message", ex.getMessage()));
         return ResponseEntity
                 .status(HttpStatus.BAD_REQUEST)
-                .body(Map.of("message", ex.getMessage()));
+                .body(Collections.singletonMap("message", ex.getMessage()));
     }
 
     @org.springframework.web.bind.annotation.ExceptionHandler(java.io.IOException.class)
     public ResponseEntity<Map<String, String>> handleIO(java.io.IOException ex) {
         return ResponseEntity
                 .status(HttpStatus.NOT_FOUND)
-                .body(Map.of("message", ex.getMessage()));
+                .body(Collections.singletonMap("message", ex.getMessage()));
     }
 
     @org.springframework.web.bind.annotation.ExceptionHandler(Exception.class)
     public ResponseEntity<Map<String, String>> handleGeneric(Exception ex) {
         return ResponseEntity
                 .status(HttpStatus.INTERNAL_SERVER_ERROR)
-                .body(Map.of("message", "Unexpected error occurred."));
+                .body(Collections.singletonMap("message", "Unexpected error occurred."));
     }
 }
